--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿    
+@{
+    ViewBag.Title = "Inicio";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Bienvenidos a PreguntadOrt</h1>
+    <img src="~/img/LogoPreguntados.jpg" alt="Logo del juego"/>
+    <br />
+    <a class="btn btn-primary" href="/Juego/ConfigurarJuego">Configurar Juego</a>
 </div>
