--- a/Views/Home/layout.cshtml
+++ b/Views/Home/layout.cshtml
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">
               
-                <img src="~/images/Logo preguntados.webp" alt="Logo del Juego" />
+                <img src="~/images/LogoPreguntados.png" alt="Logo del Juego" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
