--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,5 +7,5 @@
     <h1>Bienvenidos a PreguntadOrt</h1>
     <img src="~/img/LogoPreguntados.jpg" alt="Logo del juego"/>
     <br />
-    <a class="btn btn-primary" href="/Juego/ConfigurarJuego">Configurar Juego</a>
+    <a class="btn btn-primary" href='@Url.Action("ConfigurarJuego" , "Home")'>Configurar Juego</a>
 </div>
