--- a/Views/Home/ConfigurarJuego.cshtml
+++ b/Views/Home/ConfigurarJuego.cshtml
@@ -35,7 +35,7 @@
             </div>
 
             <div class="d-grid">
-                    <a class="btn btn-primary" href='@Url.Action("Juego" , "Home")'>Comenzar Juego</a>
+            <a class="btn btn-primary" href='@Url.Action("Juego" , "Home")'>Jugar</a>
             </div>
         </form>
     </div>
