--- a/Views/Home/Fin.cshtml
+++ b/Views/Home/Fin.cshtml
@@ -16,7 +16,7 @@
     </header>
 
     <main class="container mt-4 text-center">
-        <p>Nombre de usuario: @ViewBag.Username</p>
+        <p>Nombre de usuario: @ViewBag.username</p>
         <p>Puntaje final: @ViewBag.PuntajeFinal</p>
 
         <a href='@Url.Action("ConfigurarJuego", "Home")' class="btn btn-primary mt-3">Volver a jugar</a>
