--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,10 @@
 }
 
 <div class="text-center">
+    <img class ="banner" src="~/img\banner.png" />
+
     <h1>Bienvenidos a PreguntadOrt</h1>
-    <img src="~/img/LogoPreguntados.jpg" alt="Logo del juego"/>
+    <img class ="logo" src="~/img\LogoPreguntados.webp" alt="Logo del juego"/>
     <br />
     <a class="btn btn-primary" href='@Url.Action("ConfigurarJuego" , "Home")'>Configurar Juego</a>
 </div>
