--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,12 +1,11 @@
 
 
-/* Logo del juego (para index y layout) */
 .logo {
-  max-width: 150px;
+width: 25%;
   margin-bottom: 20px;
+
 }
 
-/* Estilo de botones principales */
 .btn-primary {
   background-color: #007bff;
   border-color: #007bff;
@@ -14,6 +13,11 @@
   padding: 10px 20px;
   font-size: 18px;
 }
-
-
-
+.banner{
+  width: 75%;
+  margin-bottom: 2%;
+}
+.logoheader{
+  width: 12%;
+  margin-right: 1%;
+}
